--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["James Maupin <jmsMaupinRC@gmail.com>"]
 python = "^3.8"
 django = "^3.0.4"
 djangorestframework = "^3.11.0"
+django-cors-headers = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
 
